crates/core/tests/proc/fn/attr_extern_c.stderr
error: Functions with explicit extern declarations are not supported. Remove the extern declaration and let the macro handle it.
 --> tests/proc/fn/attr_extern_c.rs:4:1
  |
4 | extern "C" fn foo() {}
  | ^^^^^^^^^^
